# rust-like

./: .gitignore  Cargo.toml  README.md  notes.md
client/: Cargo.toml
client/src/: canvas.rs  constants.rs  lib.rs  render.rs  util.rs
common/: Cargo.toml
common/src/: battle_brain.rs  brain.rs  character.rs  constants.rs  dialogue.rs  inventory.rs  lib.rs  loot_menu.rs  map_brain.rs  map_setup.rs  physics.rs  room.rs  util.rs
common/src/behaviors/: mod.rs  pathfinder.rs  util.rs  werewolf.rs
common/src/behaviors/pathfinder/: data.rs  lerain.rs  mod.rs  rumdare.rs  util.rs  werewolf.rs
server/: Cargo.toml
src/: main.rs
