[package]
name = "rust-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "./common" }
server = { path = "./server" }
client = { path = "./client" }

rand = "^0.8.5"
bevy = "^0.8.0"
iyes_loopless = "^0.7.1"
