[package]
name = "rust-like"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
common = { path = "./common" }
server = { path = "./server" }
client = { path = "./client" }

rand = "^0.8.5"
bevy = "^0.8.0"
iyes_loopless = "^0.7.1"
