[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

crossterm = { version = "^0.24.0", features = ["serde"] }
tui = { version = "^0.18.0", default-features = false, features = ["crossterm", "serde"] }
ron = "^0.7.1"
serde = { version = "^1.0", features = ["derive"] }
bevy = "^0.8.0"
