[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "^0.25.0", features = ["serde"] }
tui = { version = "^0.19.0", default-features = false, features = ["crossterm", "serde"] }
ron = "^0.8.0"
serde = { version = "^1.0", features = ["derive"] }
bevy = "^0.8.0"
pathfinding = "^3.0.13"
rand = "^0.8.5"
