[package]
name = "common"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
crossterm = { version = "^0.25.0", features = ["serde"] }
tui = { version = "^0.19.0", default-features = false, features = ["crossterm", "serde"] }
ron = "^0.8.0"
serde = { version = "^1.0", features = ["derive"] }
bevy = "^0.8.1"
pathfinding = "^3.0.13"
rand = "^0.8.5"
bitflags = "^1.3.2"
